changed js file

--- a/ajax/ajax.html
+++ b/ajax/ajax.html
@@ -4,8 +4,11 @@
 	<title>Ajax</title>
 </head>
 <body>
- <a href="ajax.txt" id="ajaxFile">Text file upload</a>
- 
- <script src="ajax.js"></script>
+	 
+<div id="demo">
+<h2>The XMLHttpRequest Object</h2>
+<button type="button" onclick="loadDoc()">Change Content</button>
+</div>
+<script src="ajax.js"></script>
 </body>
 </html>
