--- a/jQuery/css-example.html
+++ b/jQuery/css-example.html
@@ -2,24 +2,20 @@
 <html>
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.js"></script>
-
+	<script src="css.js" type="text/javascript"></script>
 	<title>JQuery</title>
 </head>
 <body>
-<p id ="01">Paragraph1</p>
-<p id="02">Paragraph2</p>
-<p id="03">Paragraph3</p>
-<button id="button1">Click me!</button><br>
-<button id="button2">This button shows and hides a paragraph</button><br>
-<button id="button3">FadeOut example</button>
-<button id="button4">Fadeın example</button>
+
+<button id="button1">FadeOut example</button>
+<button id="button2">Fadeın example</button>
 	<p>Css Examples</p>
 
 	<div id="div1" style="width: 80px;height: 80px;background-color: red "> </div><br>
 	<div id="div2" style="width: 80px;height: 80px; background-color: yellow "> </div><br>
 	<div id="div3" style="width: 80px;height: 80px; background-color: purple"> </div><br>
 	<div id="div4" style="width: 80px;height: 80px; background-color: green "> </div><br>
+
 
 </body>
 </html>
