--- a/jQuery/css-example.html
+++ b/jQuery/css-example.html
@@ -9,6 +9,8 @@
 
 <button id="button1">FadeOut example</button>
 <button id="button2">Fadeın example</button>
+<button id="button3">FadeToggle example</button>
+<button id="button4">FateTo example</button>
 	<p>Css Examples</p>
 
 	<div id="div1" style="width: 80px;height: 80px;background-color: red "> </div><br>
